--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.0.0')
     testCompile('org.junit.jupiter:junit-jupiter-params:5.0.0')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.0')
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    annotationProcessor 'org.projectlombok:lombok:1.18.2'
+    testCompile 'org.projectlombok:lombok:1.18.2'
+    testRuntime 'org.projectlombok:lombok:1.18.2'
 }
